force-app/main/default/objects/SamsaraLogEntries__c/SamsaraLogEntries__c.object-meta.xml
<CustomObject>
    <label>Samsara Log Entries</label>
    <nameField>
        <displayFormat>LogEntry-{0000}</displayFormat>
        <label>Samsara Log Entries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samsara Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>