force-app/main/default/objects/SamsaraLogEntries__c/fields/Acknowledgement_Time__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Time__c</fullName>
    <label>Acknowledgement Time</label>
    <type>DateTime</type>
</CustomField>