force-app/main/default/objects/SamsaraLogEntries__c/fields/CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time__c</fullName>
    <description>Captures the CPU time taken by the process</description>
    <label>CPU Time (in ms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>