force-app/main/default/objects/SamsaraLogEntries__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>⛔ ERROR</label>
            </value>
            <value>
                <fullName>WARN</fullName>
                <label>⚠️ WARN</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <label>ℹ️ INFO</label>
            </value>
            <value>
                <fullName>DEBUG</fullName>
                <label>🐞 DEBUG</label>
            </value>
            <value>
                <fullName>FINE</fullName>
                <label>👍 FINE</label>
            </value>
            <value>
                <fullName>FINER</fullName>
                <label>👌 FINER</label>
            </value>
            <value>
                <fullName>FINEST</fullName>
                <label>🌟 FINEST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>