force-app/main/default/objects/SamsaraLogEntries__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Related message of log record</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>