force-app/main/default/objects/SamsaraLogEntries__c/fields/SamsaraLog__c.field-meta.xml
<CustomField>
    <fullName>SamsaraLog__c</fullName>
    <label>Samsara Log</label>
    <referenceTo>SamsaraLog__c</referenceTo>
    <relationshipLabel>Samsara Log Entries</relationshipLabel>
    <relationshipName>Samsara_Log_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>