force-app/main/default/objects/SamsaraLogEntries__c/fields/sourceApiName__c.field-meta.xml
<CustomField>
    <fullName>sourceApiName__c</fullName>
    <label>Source API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>