force-app/main/default/objects/SamsaraLogEntries__c/fields/SourceMetadataType__c.field-meta.xml
<CustomField>
    <fullName>SourceMetadataType__c</fullName>
    <label>Source Metadata Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>