force-app/main/default/objects/SamsaraLogEntries__c/listViews/Aura_LWC_component_log_entries.listView-meta.xml
<ListView>
    <fullName>Aura_LWC_component_log_entries</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Message__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceMetadataType__c</field>
        <operation>equals</operation>
        <value>Aura/LWC</value>
    </filters>
    <label>Aura/LWC (component) log entries</label>
</ListView>