force-app/main/default/objects/SamsaraLogEntries__c/listViews/Error_log_entries.listView-meta.xml
<ListView>
    <fullName>Error_log_entries</fullName>
    <columns>NAME</columns>
    <columns>RecordId__c</columns>
    <columns>Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>Error log entries</label>
</ListView>