force-app/main/default/objects/SamsaraLogEntries__c/listViews/Flow_log_entries.listView-meta.xml
<ListView>
    <fullName>Flow_log_entries</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceMetadataType__c</field>
        <operation>equals</operation>
        <value>Flow</value>
    </filters>
    <label>Flow log entries</label>
</ListView>